--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ article {
     justify-content: space-evenly;
     border: 1px solid black;
     width: 60%;
+    /* min-width: fit-content; */
 }
 
 nav {
