--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+@media screen and (max-width: 1080px) {
+    .thumbnails {
+        justify-content: center;
+    }
+    section {
+        text-align: center;
+    }
+
+}
+
+@media screen and (max-width: 720px) {
+    article {
+        flex-wrap: wrap;
+    }
+}
+
 .blog-post img {
     height: 250px;
     border: black 1px solid;
@@ -18,6 +34,14 @@ article {
     background-color: floralwhite;
     box-shadow: 1px 1px 1px black;
     border-radius: 20px;
+}
+
+.clickable {
+    cursor: pointer;
+}
+
+.clicked {
+    box-shadow: inset 1px 1px 1px black;
 }
 
 .article-thumbnail {
