--- a/style.css
+++ b/style.css
@@ -62,8 +62,22 @@ nav input {
     box-shadow: 1px 1px 1px black;
 }
 
+.clicked::after {
+    -webkit-box-shadow: inset 2px 2px 2px #000;
+    -moz-box-shadow: inset 2px 2px 2px #000;
+    box-shadow: inset 1px 1px 2px #000;
+    bottom: 0;
+    content: "";
+    display: block;
+    left: 0;
+    height: 100%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+}
+
 .clicked {
-    box-shadow: inset 1px 1px 1px black;
     position: relative;
     top: -1px;
     left: -1px;
