--- a/style.css
+++ b/style.css
@@ -83,15 +83,14 @@ nav input {
 }
 
 .clicked {
-    position: relative;
-    top: -1px;
-    left: -1px;
+    /* position: relative; */
+    transform: translate(-1px,-1px);
 }
 
 .clickable-div {
     margin: 25px;
     border: 1px solid black;
-
+    position: relative;
 }
 
 .article-thumbnail {
@@ -183,6 +182,18 @@ nav input {
 .adventure-heading {
     margin: 15px;
     font-family: 'Permanent Marker', cursive;
+}
+
+.thumbnail-heading {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-100%);
+    color: white;
+    text-shadow: 1px 1px 1px black;
+    text-align: center;
+    width: 75%;
+    font-family: 'Kufam', sans-serif;
 }
 
 hr {
