--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ h1 {
     font-family: 'Permanent Marker', cursive;
     font-size: 50px;
     text-decoration: underline overline;
+    margin-top: 45px;
+    margin-bottom: 0;
 }
 
 article h2 {
@@ -22,7 +24,9 @@ article {
 
 body {
     background-color: rgb(41, 41, 41);
-    /* color: white; */
+    margin-top: 0px;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 section {
@@ -32,9 +36,14 @@ section {
 
 nav {
     width: 100%;
-    /* background-color: rgb(170, 214, 133); */
-    background-color: #97ad5c;
+    font-family: 'Kufam', sans-serif;
+    color: white;
+    box-shadow: 0px 2px 3px rgb(39, 39, 39);
+    background-color: black;
     border: 1px black solid;
+    position: fixed;
+    z-index: 100;
+    padding-top: 5px;
 }
 
 nav a {
@@ -42,7 +51,7 @@ nav a {
     text-decoration: none;
     padding: 10px;
     margin: 0 5px 0 5px;
-    color: black;
+    color: inherit;
 }
 
 nav ul {
@@ -54,11 +63,28 @@ nav ul {
 nav li {
     border-top-right-radius: .5em;
     border-right: 1px solid black;
-    box-shadow: 1px -1px 1px black;
 }
 
 nav input {
     height: 25px;
+}
+
+hr {
+    width: 75%;
+    border: none;
+    border-top: 3px double #333;
+    color: #333;
+    overflow: visible;
+    text-align: center;
+    height: 5px;
+}
+
+hr:after {
+    background: #f2e4a6;
+    content: '§';
+    padding: 0 4px;
+    position: relative;
+    top: -13px;
 }
 
 .clickable {
@@ -83,7 +109,6 @@ nav input {
 }
 
 .clicked {
-    /* position: relative; */
     transform: translate(-1px,-1px);
 }
 
@@ -116,7 +141,6 @@ nav input {
 .thumbnails {
     flex-wrap: wrap;
     background-color: floralwhite;
-    /* box-shadow: 0 5px 5px floralwhite, 0 -5px 5px floralwhite; */
     border-top: 3px black double;
     border-bottom: 3px black double;
 }
@@ -134,35 +158,19 @@ nav input {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* gap: 15px; */
 }
 
-#main {
-    /* background-color: rgb(231, 255, 203); */
-
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1600px;
-    background-color: #f2e4a6;
-    height: fit-content;
-    border: 1px black solid; 
-    /* border-bottom: 1px black solid; 
-    border-right: 1px black solid;  */
-}
-
-#description {
-    max-width: 720px;
-    margin-bottom: 50px;
+.tab {
+    color: black;
+    text-decoration: underline;
 }
 
 .tab-one {
-    /* background-color: rgb(255, 240, 199); */
     background-color: #f2e4a6;
     z-index: 3;
 }
 
 .tab-two {
-    /* background-color: burlywood; */
     background-color: #71988e;
     z-index: 2;
 }
@@ -182,6 +190,8 @@ nav input {
     background-position: 50% 52%;
     width: 100%;
     box-shadow: 0 3px 2px black;
+    top: 39px;
+    z-index: 99;
 }
 
 .adventure-heading {
@@ -214,59 +224,42 @@ nav input {
 }
 
 .icon-bookmark {
-
     right: 10px;
-
     background-image: url(https://i.imgur.com/vOfEgPn.png);
-
 }
 
 .icon-bookmark-filled {
-
     right: 10px;
-
     background-image: url(https://i.imgur.com/MiJ3Ffr.png);
-
 }
 
 .icon-favourite {
-
     right: 50px;
-
     background-image: url(https://i.imgur.com/MCmeT6W.png);
-
 }
 
 .icon-favourite-filled {
-
     right: 50px;
-
     background-image: url(https://i.imgur.com/ZMqSSw4.png);
-
 }
 
 .icon-share {
-
     right: 90px;
-
     background-image: url(https://i.imgur.com/OfHJ1Et.png);
-
 }
 
-hr {
-    width: 75%;
-    border: none;
-    border-top: 3px double #333;
-    color: #333;
-    overflow: visible;
-    text-align: center;
-    height: 5px;
-}
-
-hr:after {
-    background: #f2e4a6;
-    content: '§';
-    padding: 0 4px;
+#main {
     position: relative;
-    top: -13px;
+    top: 39px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1600px;
+    background-color: #f2e4a6;
+    height: fit-content;
+    border: 1px black solid; 
+}
+
+#description {
+    max-width: 720px;
+    margin-bottom: 50px;
 }
